@@ -15,21 +15,22 @@
  */
 package org.codehaus.cake.attribute;
 
-import static org.codehaus.cake.test.util.TestUtil.assertIsSerializable;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
 
-
-import org.codehaus.cake.test.util.TestUtil;
 import org.junit.Test;
+
 /**
  * Various tests for {@link DoubleAttribute}.
- *
+ * 
  * @author <a href="mailto:kasper@codehaus.org">Kasper Nielsen</a>
  * @version $Id: DoubleAttributeTest.java 590 2008-03-14 08:16:12Z kasper $
  */
 public final class DoubleAttributeTest extends AtrStubs {
-    static final DoubleAttribute ATR0 = new DoubleAttribute("a0",0D) {};
-    static final DoubleAttribute ATR1 = new DoubleAttribute("a1",1D) {};
+    static final DoubleAttribute ATR0 = new DoubleAttribute("a0", 0D) {};
+    static final DoubleAttribute ATR1 = new DoubleAttribute("a1", 1D) {};
     static final DoubleAttribute ATR100 = new DoubleAttribute("a100", 100D) {};
 
     static final DoubleAttribute NON_NEGATIVE = new DoubleAttribute("a50", 50D) {
@@ -41,20 +42,22 @@ public final class DoubleAttributeTest extends AtrStubs {
 
     @Test
     public void _constructors() {
-        assertEquals(0D, new DoubleAttribute() {}.getDefault().doubleValue(),0);
-        assertEquals(0D, new DoubleAttribute("a") {}.getDefaultValue(),0);
+        assertEquals(0D, new DoubleAttribute() {}.getDefault().doubleValue(), 0);
+        assertEquals(0D, new DoubleAttribute("a") {}.getDefaultValue(), 0);
         assertFalse(new DoubleAttribute() {}.getName().equals(new DoubleAttribute() {}.getName()));
-        assertFalse(new DoubleAttribute(3D) {}.getName().equals(new DoubleAttribute(3D) {}.getName()));
-        assertTrue(new DoubleAttribute("a") {}.getName().equals(new DoubleAttribute("a") {}.getName()));
-        assertEquals(3D, new DoubleAttribute(3D) {}.getDefaultValue(),0);
-        assertEquals(0D, ATR0.getDefaultValue(),0);
-        assertEquals(100D, ATR100.getDefaultValue(),0);
-        assertEquals(100D, ATR100.getDefault().doubleValue(),0);
+        assertFalse(new DoubleAttribute(3D) {}.getName().equals(
+                new DoubleAttribute(3D) {}.getName()));
+        assertTrue(new DoubleAttribute("a") {}.getName().equals(
+                new DoubleAttribute("a") {}.getName()));
+        assertEquals(3D, new DoubleAttribute(3D) {}.getDefaultValue(), 0);
+        assertEquals(0D, ATR0.getDefaultValue(), 0);
+        assertEquals(100D, ATR100.getDefaultValue(), 0);
+        assertEquals(100D, ATR100.getDefault().doubleValue(), 0);
         assertEquals("a100", ATR100.getName());
-        
+
         assertSame(Double.TYPE, ATR100.getType());
     }
-    
+
     @Test
     public void checkValid() {
         ATR100.checkValid(Double.MIN_VALUE);
@@ -69,28 +72,30 @@ public final class DoubleAttributeTest extends AtrStubs {
     public void checkValidIAE() {
         NON_NEGATIVE.checkValid(4D);
     }
-    
+
     @Test
     public void comparator() {
         WithAttributes wa1 = withAtr(ATR1.singleton(1D));
         WithAttributes wa2 = withAtr(ATR1.singleton(2D));
         WithAttributes wa22 = withAtr(ATR1.singleton(2D));
         WithAttributes wa3 = withAtr(ATR1.singleton(3D));
-        assertEquals(0, ATR1.compare(wa2, wa2),0);
-        assertEquals(0, ATR1.compare(wa2, wa22),0);
-        assertEquals(0, ATR1.compare(wa22, wa2),0);
+        assertEquals(0, ATR1.compare(wa2, wa2), 0);
+        assertEquals(0, ATR1.compare(wa2, wa22), 0);
+        assertEquals(0, ATR1.compare(wa22, wa2), 0);
         assertTrue(ATR1.compare(wa1, wa2) < 0);
         assertTrue(ATR1.compare(wa2, wa1) > 0);
         assertTrue(ATR1.compare(wa1, wa3) < 0);
         assertTrue(ATR1.compare(wa3, wa2) > 0);
         assertTrue(ATR1.compare(wa2, wa3) < 0);
     }
-    
+
     @Test
     public void fromString() {
-        assertEquals(-1D, ATR100.fromString(Integer.valueOf(-1).toString()),0);
-        assertEquals(Double.MIN_VALUE, ATR100.fromString(new Double(Double.MIN_VALUE).toString()),0);
-        assertEquals(Double.MAX_VALUE, ATR100.fromString(new Double(Double.MAX_VALUE).toString()),0);
+        assertEquals(-1D, ATR100.fromString(Integer.valueOf(-1).toString()), 0);
+        assertEquals(Double.MIN_VALUE, ATR100.fromString(new Double(Double.MIN_VALUE).toString()),
+                0);
+        assertEquals(Double.MAX_VALUE, ATR100.fromString(new Double(Double.MAX_VALUE).toString()),
+                0);
     }
 
     @Test
@@ -100,22 +105,22 @@ public final class DoubleAttributeTest extends AtrStubs {
         AttributeMap am111 = Attributes.singleton(ATR100, 111D);
         AttributeMap ammax = Attributes.singleton(ATR100, Double.MAX_VALUE);
 
-        assertEquals(100D, ATR100.get(withAtr(am)),0);
-        assertEquals(-1D, ATR100.get(withAtr(am1)),0);
-        assertEquals(111D, ATR100.get(withAtr(am111)),0);
-        assertEquals(Double.MAX_VALUE, ATR100.get(withAtr(ammax)),0);
+        assertEquals(100D, ATR100.get(withAtr(am)), 0);
+        assertEquals(-1D, ATR100.get(withAtr(am1)), 0);
+        assertEquals(111D, ATR100.get(withAtr(am111)), 0);
+        assertEquals(Double.MAX_VALUE, ATR100.get(withAtr(ammax)), 0);
 
-        assertEquals(10D, ATR100.get(withAtr(am), 10D),0);
-        assertEquals(-1D, ATR100.get(withAtr(am1), 10D),0);
-        assertEquals(111D, ATR100.get(withAtr(am111), 10D),0);
-        assertEquals(Double.MAX_VALUE, ATR100.get(withAtr(ammax), 10D),0);
+        assertEquals(10D, ATR100.get(withAtr(am), 10D), 0);
+        assertEquals(-1D, ATR100.get(withAtr(am1), 10D), 0);
+        assertEquals(111D, ATR100.get(withAtr(am111), 10D), 0);
+        assertEquals(Double.MAX_VALUE, ATR100.get(withAtr(ammax), 10D), 0);
 
-        assertEquals(-1D, NON_NEGATIVE.get(withAtr(am), -1D),0);
+        assertEquals(-1D, NON_NEGATIVE.get(withAtr(am), -1D), 0);
 
-        assertEquals(100D, ATR100.get(withAtr(am)),0);
-        assertEquals(-1D, ATR100.get(withAtr(am1)),0);
-        assertEquals(10D, ATR100.get(withAtr(am), 10D),0);
-        assertEquals(-1D, ATR100.get(withAtr(am1), 10D),0);
+        assertEquals(100D, ATR100.get(withAtr(am)), 0);
+        assertEquals(-1D, ATR100.get(withAtr(am1)), 0);
+        assertEquals(10D, ATR100.get(withAtr(am), 10D), 0);
+        assertEquals(-1D, ATR100.get(withAtr(am1), 10D), 0);
 
     }
 
@@ -133,10 +138,10 @@ public final class DoubleAttributeTest extends AtrStubs {
     @Test
     public void set() {
         AttributeMap am = new DefaultAttributeMap();
-        assertEquals(10D, ATR100.set(am, 10D).get(ATR100),0);
-        assertEquals(-111D, ATR100.set(withAtr(am), -111D).get(ATR100),0);
-        assertEquals(111D, ATR100.set(am, Double.valueOf(111D)).get(ATR100),0);
-        assertEquals(Double.MAX_VALUE, ATR100.set(am, Double.MAX_VALUE).get(ATR100),0);
+        assertEquals(10D, ATR100.set(am, 10D).get(ATR100), 0);
+        assertEquals(-111D, ATR100.set(withAtr(am), -111D).get(ATR100), 0);
+        assertEquals(111D, ATR100.set(am, Double.valueOf(111D)).get(ATR100), 0);
+        assertEquals(Double.MAX_VALUE, ATR100.set(am, Double.MAX_VALUE).get(ATR100), 0);
     }
 
     @Test(expected = IllegalArgumentException.class)
@@ -151,11 +156,11 @@ public final class DoubleAttributeTest extends AtrStubs {
 
     @Test
     public void toSingleton() {
-        assertEquals(-10D, ATR100.singleton(-10D).get(ATR100),0);
-        assertEquals(10D, ATR100.singleton(10D).get(ATR100),0);
-        assertEquals(Double.MAX_VALUE, ATR100.singleton(Double.MAX_VALUE).get(ATR100),0);
+        assertEquals(-10D, ATR100.singleton(-10D).get(ATR100), 0);
+        assertEquals(10D, ATR100.singleton(10D).get(ATR100), 0);
+        assertEquals(Double.MAX_VALUE, ATR100.singleton(Double.MAX_VALUE).get(ATR100), 0);
 
-        assertEquals(10D, NON_NEGATIVE.singleton(10D).get(NON_NEGATIVE),0);
+        assertEquals(10D, NON_NEGATIVE.singleton(10D).get(NON_NEGATIVE), 0);
     }
 
     @Test(expected = IllegalArgumentException.class)
