@@ -15,21 +15,22 @@
  */
 package org.codehaus.cake.attribute;
 
-import static org.codehaus.cake.test.util.TestUtil.assertIsSerializable;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
 
-
-import org.codehaus.cake.test.util.TestUtil;
 import org.junit.Test;
+
 /**
  * Various tests for {@link FloatAttribute}.
- *
+ * 
  * @author <a href="mailto:kasper@codehaus.org">Kasper Nielsen</a>
  * @version $Id: FloatAttributeTest.java 590 2008-03-14 08:16:12Z kasper $
  */
 public final class FloatAttributeTest extends AtrStubs {
-    static final FloatAttribute ATR0 = new FloatAttribute("a0",0F) {};
-    static final FloatAttribute ATR1 = new FloatAttribute("a1",1F) {};
+    static final FloatAttribute ATR0 = new FloatAttribute("a0", 0F) {};
+    static final FloatAttribute ATR1 = new FloatAttribute("a1", 1F) {};
     static final FloatAttribute ATR100 = new FloatAttribute("a100", 100F) {};
 
     static final FloatAttribute NON_NEGATIVE = new FloatAttribute("a50", 50F) {
@@ -41,20 +42,21 @@ public final class FloatAttributeTest extends AtrStubs {
 
     @Test
     public void _constructors() {
-        assertEquals(0F, new FloatAttribute() {}.getDefault().floatValue(),0);
-        assertEquals(0F, new FloatAttribute("a") {}.getDefaultValue(),0);
+        assertEquals(0F, new FloatAttribute() {}.getDefault().floatValue(), 0);
+        assertEquals(0F, new FloatAttribute("a") {}.getDefaultValue(), 0);
         assertFalse(new FloatAttribute() {}.getName().equals(new FloatAttribute() {}.getName()));
         assertFalse(new FloatAttribute(3F) {}.getName().equals(new FloatAttribute(3F) {}.getName()));
-        assertTrue(new FloatAttribute("a") {}.getName().equals(new FloatAttribute("a") {}.getName()));
-        assertEquals(3F, new FloatAttribute(3F) {}.getDefaultValue(),0);
-        assertEquals(0F, ATR0.getDefaultValue(),0);
-        assertEquals(100F, ATR100.getDefaultValue(),0);
-        assertEquals(100F, ATR100.getDefault().floatValue(),0);
+        assertTrue(new FloatAttribute("a") {}.getName()
+                .equals(new FloatAttribute("a") {}.getName()));
+        assertEquals(3F, new FloatAttribute(3F) {}.getDefaultValue(), 0);
+        assertEquals(0F, ATR0.getDefaultValue(), 0);
+        assertEquals(100F, ATR100.getDefaultValue(), 0);
+        assertEquals(100F, ATR100.getDefault().floatValue(), 0);
         assertEquals("a100", ATR100.getName());
-        
+
         assertSame(Float.TYPE, ATR100.getType());
     }
-    
+
     @Test
     public void checkValid() {
         ATR100.checkValid(Float.MIN_VALUE);
@@ -69,28 +71,28 @@ public final class FloatAttributeTest extends AtrStubs {
     public void checkValidIAE() {
         NON_NEGATIVE.checkValid(4F);
     }
-    
+
     @Test
     public void comparator() {
         WithAttributes wa1 = withAtr(ATR1.singleton(1F));
         WithAttributes wa2 = withAtr(ATR1.singleton(2F));
         WithAttributes wa22 = withAtr(ATR1.singleton(2F));
         WithAttributes wa3 = withAtr(ATR1.singleton(3F));
-        assertEquals(0, ATR1.compare(wa2, wa2),0);
-        assertEquals(0, ATR1.compare(wa2, wa22),0);
-        assertEquals(0, ATR1.compare(wa22, wa2),0);
+        assertEquals(0, ATR1.compare(wa2, wa2), 0);
+        assertEquals(0, ATR1.compare(wa2, wa22), 0);
+        assertEquals(0, ATR1.compare(wa22, wa2), 0);
         assertTrue(ATR1.compare(wa1, wa2) < 0);
         assertTrue(ATR1.compare(wa2, wa1) > 0);
         assertTrue(ATR1.compare(wa1, wa3) < 0);
         assertTrue(ATR1.compare(wa3, wa2) > 0);
         assertTrue(ATR1.compare(wa2, wa3) < 0);
     }
-    
+
     @Test
     public void fromString() {
-        assertEquals(-1F, ATR100.fromString(Integer.valueOf(-1).toString()),0);
-        assertEquals(Float.MIN_VALUE, ATR100.fromString(new Float(Float.MIN_VALUE).toString()),0);
-        assertEquals(Float.MAX_VALUE, ATR100.fromString(new Float(Float.MAX_VALUE).toString()),0);
+        assertEquals(-1F, ATR100.fromString(Integer.valueOf(-1).toString()), 0);
+        assertEquals(Float.MIN_VALUE, ATR100.fromString(new Float(Float.MIN_VALUE).toString()), 0);
+        assertEquals(Float.MAX_VALUE, ATR100.fromString(new Float(Float.MAX_VALUE).toString()), 0);
     }
 
     @Test
@@ -100,22 +102,22 @@ public final class FloatAttributeTest extends AtrStubs {
         AttributeMap am111 = Attributes.singleton(ATR100, 111F);
         AttributeMap ammax = Attributes.singleton(ATR100, Float.MAX_VALUE);
 
-        assertEquals(100F, ATR100.get(withAtr(am)),0);
-        assertEquals(-1F, ATR100.get(withAtr(am1)),0);
-        assertEquals(111F, ATR100.get(withAtr(am111)),0);
-        assertEquals(Float.MAX_VALUE, ATR100.get(withAtr(ammax)),0);
+        assertEquals(100F, ATR100.get(withAtr(am)), 0);
+        assertEquals(-1F, ATR100.get(withAtr(am1)), 0);
+        assertEquals(111F, ATR100.get(withAtr(am111)), 0);
+        assertEquals(Float.MAX_VALUE, ATR100.get(withAtr(ammax)), 0);
 
-        assertEquals(10F, ATR100.get(withAtr(am), 10F),0);
-        assertEquals(-1F, ATR100.get(withAtr(am1), 10F),0);
-        assertEquals(111F, ATR100.get(withAtr(am111), 10F),0);
-        assertEquals(Float.MAX_VALUE, ATR100.get(withAtr(ammax), 10F),0);
+        assertEquals(10F, ATR100.get(withAtr(am), 10F), 0);
+        assertEquals(-1F, ATR100.get(withAtr(am1), 10F), 0);
+        assertEquals(111F, ATR100.get(withAtr(am111), 10F), 0);
+        assertEquals(Float.MAX_VALUE, ATR100.get(withAtr(ammax), 10F), 0);
 
-        assertEquals(-1F, NON_NEGATIVE.get(withAtr(am), -1F),0);
+        assertEquals(-1F, NON_NEGATIVE.get(withAtr(am), -1F), 0);
 
-        assertEquals(100F, ATR100.get(withAtr(am)),0);
-        assertEquals(-1F, ATR100.get(withAtr(am1)),0);
-        assertEquals(10F, ATR100.get(withAtr(am), 10F),0);
-        assertEquals(-1F, ATR100.get(withAtr(am1), 10F),0);
+        assertEquals(100F, ATR100.get(withAtr(am)), 0);
+        assertEquals(-1F, ATR100.get(withAtr(am1)), 0);
+        assertEquals(10F, ATR100.get(withAtr(am), 10F), 0);
+        assertEquals(-1F, ATR100.get(withAtr(am1), 10F), 0);
 
     }
 
@@ -133,10 +135,10 @@ public final class FloatAttributeTest extends AtrStubs {
     @Test
     public void set() {
         AttributeMap am = new DefaultAttributeMap();
-        assertEquals(10F, ATR100.set(am, 10F).get(ATR100),0);
-        assertEquals(-111F, ATR100.set(withAtr(am), -111F).get(ATR100),0);
-        assertEquals(111F, ATR100.set(am, Float.valueOf(111F)).get(ATR100),0);
-        assertEquals(Float.MAX_VALUE, ATR100.set(am, Float.MAX_VALUE).get(ATR100),0);
+        assertEquals(10F, ATR100.set(am, 10F).get(ATR100), 0);
+        assertEquals(-111F, ATR100.set(withAtr(am), -111F).get(ATR100), 0);
+        assertEquals(111F, ATR100.set(am, Float.valueOf(111F)).get(ATR100), 0);
+        assertEquals(Float.MAX_VALUE, ATR100.set(am, Float.MAX_VALUE).get(ATR100), 0);
     }
 
     @Test(expected = IllegalArgumentException.class)
@@ -151,11 +153,11 @@ public final class FloatAttributeTest extends AtrStubs {
 
     @Test
     public void toSingleton() {
-        assertEquals(-10F, ATR100.singleton(-10F).get(ATR100),0);
-        assertEquals(10F, ATR100.singleton(10F).get(ATR100),0);
-        assertEquals(Float.MAX_VALUE, ATR100.singleton(Float.MAX_VALUE).get(ATR100),0);
+        assertEquals(-10F, ATR100.singleton(-10F).get(ATR100), 0);
+        assertEquals(10F, ATR100.singleton(10F).get(ATR100), 0);
+        assertEquals(Float.MAX_VALUE, ATR100.singleton(Float.MAX_VALUE).get(ATR100), 0);
 
-        assertEquals(10F, NON_NEGATIVE.singleton(10F).get(NON_NEGATIVE),0);
+        assertEquals(10F, NON_NEGATIVE.singleton(10F).get(NON_NEGATIVE), 0);
     }
 
     @Test(expected = IllegalArgumentException.class)
